# decision-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decision-agent-spec.md  design-gaps-and-proposals.md  detailed-design.md  operation-guide.md
examples/: blog-outline-cases.jsonl  profile.json  request.json  review-feedback.json  review-profile.json  review-request.json
src/decision_agent/: __init__.py  agent.py  cli.py  models.py  storage.py
src/decision_agent/engines/: __init__.py  heuristic.py  llm.py
tests/: test_agent.py
